# E2E-Agent

./: README.md  pyproject.toml
sdk/src/agent/: assistant_interface.py  broker.py  settings.py
utilities/src/utilities/: exception.py  func.py  logger.py  typing.py
utilities/src/utilities/settings/: config.py  object_storage.py  redis_wrapper.py  settings.py
