[project]
name = "e2e-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.1.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.116.1",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "minio>=7.2.16",
    "miniopy-async>=1.23.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "ray>=2.49.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "starlette>=0.47.3",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
